@@ -2,6 +2,7 @@
 * Enhancements
   * Added shortcut method to check element exists
   * Added #disabled? method to Element
+  * Added #selected_options method to SelectList
 === Version 1.1.1 / 2016-12-13
 * Enhancements
   * Added ?_elements to ElementLocators so you can find all elements that match an identifier
